--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
